config.json: updated domain

--- a/_data/config.json
+++ b/_data/config.json
@@ -27,5 +27,6 @@
             "url": "/faq",
             "style": "link"
         }
-    ]
+    ],
+    "domain": "https://utarlogy-f4e2d.netlify.app"
 }
